# sap_b1-erp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
Purchase Team/: streamlit_app.py
Purchase Team/app/: chat_response.py
app/: chat_response.py  config.py  main.py
app/agents/: big_supervisor_agent.py
app/agents/ap_invoice/: cancel_agent.py  close_agent.py  create_agent.py  fetch_agent.py  update_agent.py
app/agents/purchase_order/: cancel_agent.py  close_agent.py  create_po_agent.py  fetch_agent.py  update_agent.py
app/agents/purchase_return/: cancel_agent.py  close_agent.py  create_agent.py  fetch_agent.py  update_agent.py
app/agents/purchase_team/: langgraph_workflow.py  supervisor_agent.py
app/agents/sales_team/: supervisor_agent.py
app/api/: ap_invoices.py  chat.py  purchase_orders.py  purchase_returns.py  sales.py
app/crud/: sales_crud.py
app/db/: sales_models.py
app/operations/: claude_client.py  conversation_memory.py  groq_client.py  llm_client.py  purchase_order_intent_parser.py  purchase_rag.py  sales_intent_parser.py  sales_rag.py  sap_client.py  sql_executor.py  sql_numeric_safety.py  utils.py  write_rag.py
app/rag/data/: purchase_queries.json  purchase_tables.json  sales_queries.json  (+1 more)
frontend/src/: App.css  App.tsx  index.css
sap_purchase_supervisor_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agentic_supervisors.py  test_conversation_memory.py  test_purchase_langgraph_workflow.py  test_purchase_rag.py  test_sql_executor.py  test_sql_numeric_safety.py
(+11 files in other folders)
