[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-purchase-supervisor-agent"
version = "0.1.0"
description = "FastAPI backend and Streamlit supervisor UI for SAP Business One purchase workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SAP Purchase Supervisor Agent Team" }
]
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ["streamlit_app"]

[tool.setuptools.packages.find]
include = ["app*", "shared*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
